# nest

./: .gitignore  Cargo.toml  README.md  index.js  package.json
src/: genetic_algorithm.rs  job.rs  main.rs  nest_polygon.rs  nesting_runner.rs  nfp_cache.rs  packing.rs  todo
